--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,8 @@ pycryptodomex==3.12.0
 pydantic==1.9.0
 PyNaCl==1.5.0
 pyparsing==3.0.6
--e git+https://github.com/algorand/pyteal.git@master#egg=pyteal
--e git+https://github.com/algorand/py-algorand-sdk.git@master#egg=py-algorand-sdk
--e git+https://github.com/algorand/pyteal-utils.git@main#egg=pyteal_utils
+pyteal==v0.10.0
+py-algorand-sdk==1.10.0b1
 pytest==6.2.5
 pytest-depends==1.0.1
 pytest-forked==1.4.0
@@ -24,3 +23,6 @@ pytest-xdist==2.5.0
 PyYAML==6.0
 toml==0.10.2
 typing-extensions==4.0.1
+uvarint==1.2.0
+eth_abi==3.0.0
+coincurve==17.0.0
